--- a/EJERCICIO_DOM/style.css
+++ b/EJERCICIO_DOM/style.css
@@ -1,3 +1,9 @@
 .card{
-
+    border-radius: 10%;
+    background-color: red;
+    width: 50%;
+    height: 50%;
+}
+h2{
+    text-align: center;
 }
